--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>RPG - Dragon Repeller</title>
+    <link src="stylesheet" />
+    <script src="./script.js"></script>
   </head>
-  <body></body>
+  <body>
+    <div id="game"></div>
+  </body>
 </html>
