--- a/index.html
+++ b/index.html
@@ -27,8 +27,19 @@
         <button id="button2">Go to cave</button>
         <button id="button3">Fight dragon</button>
       </div>
-      <div id="monsterStats"></div>
-      <div id="text"></div>
+      <div id="monsterStats">
+        <span class="stat"
+          >Monster Name: <strong><span id="monsterName"></span></strong>
+        </span>
+        <span class="stat"
+          >Health: <strong><span id="monsterHealth"></span></strong
+        ></span>
+      </div>
+      <div id="text">
+        Welcome to Dragon Repeller. You must defeat the dragon that is
+        preventing people from leaving the town. You are in the town square.
+        Where do you want to go? Use the buttons above.
+      </div>
     </div>
     <!-- This means your code runs after the browser has finished reading the HTML, and your document.querySelector() will see the button - because the browser has processed it yet. -->
     <script src="./script.js"></script>
